# babel

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  babel.dsp  babel.mcp  babel.sln  babel.vcproj  common.mk  libqbabel.pro  libqbabel.sln  libqbabel.vcproj
include/babel/: Arr.h  Registry.h  StrBuf.h  Tree.h  algo.h  babel.h  bbconfig.h  bit.h  cpg_unicode.h  cpg_unicode_blocks.inl  defs.h  dir.h  enc.h  enc_dbc.h  enc_sbc.h  enc_utf16.h  enc_utf8.h  file.h  fixmath.h  heap.h  json.h  log.h  map.h  mem.h  str.h  strbuf.h  timedate.h
src/: Android.mk  Arr.cpp  Registry.cpp  StrBuf.cpp  Tree.cpp  algo.c  bbStrBuf.cpp  bit.c  cpg_unicode.c  cpg_unicode_iswide.inl  dir.c  dir_qt.cpp  enc.c  enc_sbc.c  enc_utf16.c  enc_utf8.c  err.c  file.c  file_qt.cpp  fixmath.c  heap.c  json.c  json.cpp  log.c  map.c  mem.c  str.c  strbuf.c  timedate.c
test/: test.pri  test.pro  testjson.c  testjson.cpp  testjson.pro  testjson_cpp  testjson_cpp.pro  testmap.c  testmap.pro
test/babeltest/: Makefile  babeltest.c  babeltest.dsp  babeltest.vcproj  qbabeltest.pro  qbabeltest.vcproj  strbuf.cpp
util/: unicode_blocks.pl  unicode_iswide.pl  unicode_iswide_winfont.cpp  unicode_iswide_winfont.dsp  unicode_iswide_winfont.vcproj
